added forgot password and reset password APIs
